Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -19,7 +19,7 @@
 % use microtype if available
 \IfFileExists{microtype.sty}{%
 \usepackage{microtype}
-\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fontshttps://de.overleaf.com/project/5e85b0680d0bed00011ea790
 }{}
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
@@ -105,7 +105,7 @@ Anthropology, MPI EVA), Dr.~Benjamin Marco Peter (MPI EVA,
 
 \section{Introduction}\label{introduction}
 
-In recent years, genetic evidence for the direct contact and interbreeding of modern humans with other hominin populations, such as Neandertals \citep{green_draft_2010,prufer_complete_2013,vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,prufer_high-coverage_2017} and Denisovans \citep{reich_genetic_2010,meyer_high-coverage_2012,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016} was discovered. These admixture events are often used to resolve the timing and duration of biogeographical events by dating them \citep{sankararaman_date_2012,jacobs_multiple_2019,vyas_analyses_2019}. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans, when their range overlapped. Archaeological evidence suggest a range overlap between the first modern humans out-of-Africa at around 188 thousand years ago (kya) \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals around 37 kya \citep{zilhao_precise_2017} and 39 kya \citep{higham_timing_2014} at the end of the Mousterian. This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture is hoped to unveil more evidence of the timing and especially duration of this interaction,
+In recent years, genetic evidence for the direct contact and interbreeding of modern humans with other hominin populations, such as Neandertals \citep{green_draft_2010,prufer_complete_2013,vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,prufer_high-coverage_2017} and Denisovans \citep{reich_genetic_2010,meyer_high-coverage_2012,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016} was discovered. These admixture events are often used to resolve the timing and duration of biogeographical events by dating them \citep{sankararaman_date_2012,jacobs_multiple_2019,vyas_analyses_2019}. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans, when their range overlapped. Archaeological evidence suggest a range overlap between the first modern humans out-of-Africa at  around 188 thousand years ago (kya) \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals around 37 kya \citep{zilhao_precise_2017} and 39 kya \citep{higham_timing_2014} at the end of the Mousterian. This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture is hoped to unveil more evidence of the timing and especially duration of this interaction,
 potentially holding a clue of the debated question of extinction of these hominin populations. Another example is the geographical range distribution of Denisovans that is inferred by admixture proportions and time estimates from present day population and their geographical distribution \citep{jacobs_multiple_2019}. 
 
 The accuracy and information content of admixture dates are dependent on the model used and its assumptions.
@@ -642,7 +642,7 @@ admixture time estimates for a pulse or a multi-generation admixture are similar
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/fig3-1.pdf}
-\caption{\label{fig:fig3} Comparison of the standardized difference between true and estimated admixture time for each parameter and the standard model of 100 replications each. Dotted horizontal line indicates unbiased admixture estimates.}
+\caption{\label{fig:fig3} Effect size estimates for each parameter on the standardized difference between true and estimated admixture time. Dotted horizontal line indicates unbiased admixture estimates.}
 \end{figure}
 
 \subsection{Estimating the Lomax-parameters under different conditions}\label{estimating the Lomax-parameters under different conditions}
@@ -692,13 +692,12 @@ under powered.
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/fig4-1.pdf}
-\caption{\label{fig:fig4} Parameter estimate for different sampling and
+\caption{\label{fig:fig4} Lomax parameter estimate for different sampling and
 admixture duration times using different methods for assigning genetic
-length A) Mean time estimates from the pulse model fit of different gene
+length A) Mean time estimates for different gene
 flow length all sampled 50 generations after the gene flow ended. B)
-Lomax duration estimate of the scenario C) Mean time estimates from the
-pulse model fit of different sampling times after the end of 800
-generations of gene flow. D) Lomax duration estimate of the scenario}
+Duration estimate of the scenario C) Mean time estimates for different sampling times after the end of 800
+generations of gene flow. D) Duration estimate of the scenario}
 \end{figure}
 
 
@@ -757,7 +756,7 @@ The other major avenue are ancient DNA samples from early modern humans that liv
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS2-1.pdf}
-\caption{\label{fig:figS2} Comparison of the standardized difference between true and estimated admixture time for all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable and the gene flow model = pulse/continuous, with 100 replicates respectively. Dotted line represents the model prediction with the 5.5 \% and 94.5 \% compatibility intervals solid lines. Dotted horizontal line indicates no difference between true and estimated time.}
+\caption{\label{fig:figS2} Comparison of the standardized difference between true and estimated admixture time for all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable and the gene flow model = pulse/continuous, with 100 replicates respectively. Dotted horizontal line indicates no difference between true and estimated time.}
 \end{figure}
 
 \begin{table}[H]
@@ -788,10 +787,9 @@ sigma & 0.46 & 0.01 & 0.44 & 0.47 & 2239.47 & 1\\
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS3-1.pdf}
-\caption{\label{fig:figS2} Comparison of mean time estimates between the Exponential and Lomax model A) Mean time estimates of the Exponential model fit for different 
-admixture durations all sampled 50 generations after the admixture ended. B)
-Lomax mean time estimate for the same scenario C) Mean time estimates of the Exponential model fit for different sampling times after the end of 800
-generations of continuous admixture. D) Lomax mean time estimate for the same scenario}
+\caption{\label{fig:figS2} Mean time estimates of the Exponential model A) Mean time estimates for different 
+admixture durations all sampled 50 generations after the admixture ended. B) Mean time estimates for different sampling times after the end of 800
+generations of continuous admixture.}
 \end{figure}
 
 \begin{table}[H]
