--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -1102,7 +1102,7 @@ ggplot(Post_effect_size_est,aes(x=row.names(Post_effect_size_est),y=as.numeric(a
   labs(x = "")+
   labs(y = "Standardized difference between true and estimated time")+
   theme(plot.title = element_text(hjust = 0.5,size = 12))+
-  scale_x_discrete(labels= c("Standart Model","Continuous GF","Varying recombination","Complex Demography","d0 = 0.02","HES")
+  scale_x_discrete(labels= c("Standard Model","Continuous GF","Varying recombination","Complex Demography","d0 = 0.02","HES")
                     )+
   scale_color_manual("Gene Flow Model",
                      values = c(cbPalette_viridis[6],cbPalette_viridis[1]),
